# exploring_interpreters

./: .gitignore  .gitmodules  cabal.project  exploring-interpreters.cabal
Language/Explorer/: Algebraic.hs  Compressed.hs  Disk.hs  Monadic.hs  Monadic2.hs  Monadic3.hs  Monadic4.hs  Monadic5.hs  Zipper.hs
Language/Explorer/Tools/: Diff.hs  DiskStore.hs  Protocol.hs  REPL.hs  REPL2.hs
examples/: Whilelang.hs
mini-java/: Abs.hs  CHANGELOG.md  Dockerfile  Interpreter.hs  JSON.hs  Main.hs  SeqInterpreter.hs  cabal.project  mini-java.cabal
mini-java/GUI/: bridge.py  client.py  main.py
mini-java/examples/: BasicInheritance.minijava  BinaryTree.java  Simple.minijava  SimpleOverride.minijava  TreeVisitor.minijava
mini-java/examples/repl/: AdvancedInteraction.minijava  BasicInheritance.minijava  BinaryTreeLarge.minijava  IntermediateInteraction.minijava  LinkedList.minijava  SimpleOverride.minijava
mini-java/exploring_interpreters/: LICENSE  exploring-interpreters.cabal
results/: plot.py
results/data/: data1.csv  data2.csv  data22.csv  data3.csv  data4.csv  data5.csv  data_monadic1.csv  data_monadic2.csv  data_monadic3.csv
results/data/final/: scheme1.csv  scheme2.csv  scheme3.csv  scheme7.csv  scheme_bench2.csv  scheme_bench3.csv  scheme_big2.csv  (+1 more)
results/mini-java/: all-6.pgf  all.pgf  final.pgf  legend.pgf  v1.pgf  v2.pgf  v3.pgf  v4.pgf  v5.pgf  v6.pgf  v7.pgf
results/scheme/: all-6.pgf  all.pgf  final.pgf  v1.pgf  v2.pgf  v3.pgf  v4.pgf  v5.pgf  v6.pgf  v7.pgf
scheme/: Abs.hs  Interpreter.hs  LICENSE  Main.hs  cabal.project  scheme.cabal
(+33 files in other folders)
